@@ -172,6 +172,7 @@ enum key_clause_type {
 
 static cb_tree			current_expr;
 static struct cb_field		*current_field;
+static struct cb_field		*current_field_vary;
 static struct cb_field		*control_field;
 static struct cb_field		*description_field;
 static struct cb_file		*current_file;
@@ -5096,7 +5097,7 @@ assign_clause:
 	if (ext_dyn_specified) {
 		cb_error (_("EXTERNAL/DYNAMIC cannot be used with USING/VARYING"));
 	}
-        cb_verify (cb_assign_using_variable, "ASSIGN USING/VARYING variable");
+	cb_verify (cb_assign_using_variable, "ASSIGN USING/VARYING variable");
 
 	current_file->assign_type = CB_ASSIGN_VARIABLE_REQUIRED;
 	current_file->assign = cb_build_assignment_name (current_file, $6);
@@ -8592,12 +8593,25 @@ page_or_ids:
 ;
 
 report_varying_clause:
-  VARYING WORD var_from var_by 
+  VARYING report_varying_list
+  {
+	current_field->report_vary_var = $2;
+  }
+;
+
+report_varying_list:
+  report_varying			{ $$ = CB_LIST_INIT ($1); }
+| report_varying_list
+  report_varying			{ $$ = cb_list_add ($1, $2); }
+;
+
+report_varying:
+  WORD var_from var_by 
   {
 	cb_tree x;
 
-	if (CB_WORD_COUNT ($2) == 0) {
-		x = cb_build_field (cb_build_reference (CB_NAME($2)));
+	if (CB_WORD_COUNT ($1) == 0) {
+		x = cb_build_field (cb_build_reference (CB_NAME($1)));
 		CB_FIELD (x)->usage = CB_USAGE_INDEX;
 		CB_FIELD (x)->index_type = CB_STATIC_INT_INDEX;
 		CB_FIELD (x)->values = CB_LIST_INIT (cb_zero);
@@ -8607,15 +8621,19 @@ report_varying_clause:
 		CB_FIELD (x)->flag_internal_register = 1;
 		CB_TREE (x)->category = CB_CATEGORY_NUMERIC;
 		cb_validate_field (CB_FIELD (x));
-		current_field->report_vary_var = cb_build_field_reference (CB_FIELD (x), NULL);
 		CB_FIELD_ADD (current_program->working_storage, CB_FIELD (x));
+		current_field_vary = CB_FIELD (x);
+		$$ = cb_build_field_reference (CB_FIELD (x), NULL);
 	} else {
-		struct cb_field *f = CB_FIELD (cb_ref ($2));
-		current_field->report_vary_var = $2;
+		struct cb_field *f = CB_FIELD (cb_ref ($1));
 		if (f->usage != CB_USAGE_INDEX
 		 || !f->flag_internal_register)
-			cb_error_x ($2, _("%s is not valid for VARYING"),f->name);
+			cb_error_x ($1, _("%s is not valid for VARYING"),f->name);
+		$$ = $1;
+		current_field_vary = f;
 	}
+	current_field_vary->report_vary_from = current_field->report_vary_from;
+	current_field_vary->report_vary_by = current_field->report_vary_by;
   }
 ;
 
